--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xplorify",
+  "name": "shofinity",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,9 +12,12 @@
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.1",
+    "core-js": "^3.33.0",
     "expo": "~49.0.8",
     "expo-location": "~16.1.0",
     "expo-print": "~12.4.2",
@@ -25,11 +28,12 @@
     "react-native": "0.72.5",
     "react-native-anchor-carousel": "^3.1.2",
     "react-native-element": "^1.2.1",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-paper": "^5.10.4",
+    "react-native-paper": "^5.11.0",
     "react-native-pdf": "^6.7.1",
     "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "~3.3.0",
