--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/splash_screen.png",
-      "resizeMode": "cover",
+      "resizeMode": "native",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
