--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "shofinity",
+  "name": "shopfinity",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,17 +19,22 @@
     "axios": "^1.5.1",
     "core-js": "^3.33.0",
     "expo": "~49.0.8",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.4",
     "expo-location": "~16.1.0",
     "expo-print": "~12.4.2",
     "expo-sharing": "~11.5.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-anchor-carousel": "^3.1.2",
+    "react-native-document-picker": "^9.0.1",
     "react-native-element": "^1.2.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.0.1",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
@@ -43,6 +48,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation-stack": "^2.10.4",
+    "start": "^5.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
