--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-anchor-carousel": "^3.1.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-element": "^1.2.1",
     "react-native-elements": "^3.4.3",
@@ -46,6 +47,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation-stack": "^2.10.4",
     "start": "^5.1.0",
